Exported some Repo functionality via RMI.  First (still broken) Repo based CLT.  Some cleanup and modification to other CLTs.  WIP.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@4500 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261